Fix menu alignment

--- a/wp-content/themes/WPSeed/assets/styles/general.scss
+++ b/wp-content/themes/WPSeed/assets/styles/general.scss
@@ -392,3 +392,8 @@ a {
     }
   }
 }
+
+.menu-container {
+  width: 100vw;
+  padding: 0 1rem;
+}
